about us, add gear ui fix

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,6 +18,7 @@
 @import 'components/theme-card-two';
 @import 'components/footer';
 @import 'components/material-input';
+@import 'components/CustomInputWithButton';
 // Pages
 @import 'pages/home';
 @import 'pages/home.animation';
