--- a/src/scss/pages/editgear.scss
+++ b/src/scss/pages/editgear.scss
@@ -32,6 +32,7 @@
               letter-spacing: 0.08em;
               text-transform: uppercase;
               color: #252525;
+              opacity: 0.5;
               margin: 0;
               padding-left: 15px;
             }
@@ -123,6 +124,10 @@
         }
         .ELBLI_desc {
           border: #e5e3e4 solid 1px;
+
+          .mui--is-not-empty ~ label {
+            line-height: normal !important;
+          }
           label{
             font-family: Helvetica Neue;
             font-size: 11px;
@@ -146,13 +151,16 @@
       .ELBL_type {
         .info-right-container{
           display: block;
+
           .type-tab-div{
             margin-top:30px;
             display: flex;
+
             .type-tabs {
               white-space: nowrap;
               margin: 0;
               -webkit-overflow-scrolling: touch;
+
               input {
                 display: none !important;
               }
@@ -173,6 +181,18 @@
                   border: 1px solid #00F077;
                 }
               }
+              .new {
+                border: 1px solid #F8F1E8;
+              }
+              .like-new {
+                border: 1px solid #ffe9e9
+              }
+              .slightly-worn {
+                border: 1px solid #F8F1E8;
+              }
+              .worn {
+                border-color: #F9DADA;
+              }
             }
             .kit-check{
               margin-left: 59px;
@@ -182,8 +202,26 @@
               }
             }
           }
-          .form-accessories{
+          .form-accessories {
             margin-top: 43px;
+
+            #accessories-container {
+              display: flex;
+              flex-wrap: wrap;
+
+              .input-with-button-container {
+                width: 200px;
+                margin-right: 10px;
+              }
+            }
+            .accessories {
+              color: #aaa;
+              margin-bottom: 10px;
+            }
+            button {
+              color: #252525;
+              border-color: #252525;
+            }
           }
         }
       }
@@ -204,17 +242,21 @@
             height: 100px;
             width: 100px;
             border: 1px solid lightgray;
-            margin: 0 10px 0px 0;
+            margin: 0 10px 10px 0;
             display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden;
+            cursor: pointer;
 
             .theme-form-field {
               margin:0;
             }
             img {
               width: 100%;
+            }
+            input {
+              cursor: pointer;
             }
           }
 
