--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -207,6 +207,7 @@
            letter-spacing: 0.03em;
            color: #F74377;
            text-decoration: underline;
+           cursor: pointer;
          }
          .upload-photo-row {
            .file-input-container {
