--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -616,6 +616,9 @@
     background-color: white;
     opacity: 0.9;
   }
+  .down-sidbar .sidebar {
+    padding: 0 !important;
+  }
   .views {
     margin-top: 1rem;
     justify-content: flex-start !important;
@@ -708,12 +711,12 @@
       bottom: 0
     }
     ul.category-container {
-      bottom: 80px;
       position: fixed;
       width: 100%;
       max-height: 40vh;
       overflow: auto;
       visibility: hidden;
+      bottom: 12vh;
 
       &.active {
         visibility: visible;
@@ -766,5 +769,8 @@
         margin-left: 10px;
       }
     }
+  }
+  .down-sidbar .sidebar {
+    padding: 0 !important;
   }
  }
