--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -251,6 +251,12 @@ img {
   input {
     color: #252525;
     font-size: 16px !important;
+
+    @media (max-width: 767px) {
+      &::placeholder {
+        font-size: 9px;
+      }
+    }
   }
   label {
     margin-left: 15px !important;
