--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -256,7 +256,7 @@
       .checkout-header, .address-select {
         padding: 25px 16px;
       }
-      .address-select div {
+      .address-select > div {
         margin: 0 auto;
 
         & > div {
