--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -182,6 +182,8 @@ header {
 
       @include media-breakpoint-down(sm) {
         padding: 0 20px;
+        color: white;
+        font-size: 30px;
 
         span {
           display: none;
