--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -31,19 +31,19 @@
 @import 'pages/dashboard/order-history';
 @import 'pages/dashboard/payment-dashboard';
 @import 'pages/addgear';
-@import 'pages/viewgear';
 @import 'pages/cart';
 @import 'pages/checkout';
 @import 'pages/payment';
 @import 'pages/rent-gear';
 @import 'pages/rent-gear-detail';
 @import 'pages/list-gear';
-@import 'components/custom-daterange-picker';
 @import 'pages/partner';
 @import 'pages/FAQ';
 @import 'pages/favourites';
 @import 'pages/editgear';
 @import 'pages/privacy-policy';
+@import 'pages/not-found';
+@import 'components/custom-daterange-picker';
 @import 'components/cart-modal';
 @import 'components/about-modal';
 @import 'components/empty_activity';
