--- a/src/scss/pages/about.scss
+++ b/src/scss/pages/about.scss
@@ -127,9 +127,10 @@
       }
       & > div:first-child {
         margin-top: -12px;
+        margin-bottom: 30px;
       }
       .avatar-container {
-        margin-top: 0px;
+        margin-top: 0;
         display: flex;
         justify-content: flex-end
       }
@@ -355,6 +356,7 @@
     }
     .about-us-body {
       margin-top: -20px;
+
       .team-members {
         .container {
           padding-top: 0;
@@ -365,10 +367,12 @@
           }
         }
       }
-
       .home-subsection {
         margin: 60px 0 !important;
 
+        &:first-child {
+          margin-top: 120px !important;
+        }
         & > div:last-child {
           margin-bottom: 30px;
         }
@@ -384,6 +388,10 @@
         button {
           width: 100%;
         }
+      }
+      .question-back-img {
+        flex: 0.8 1 41% !important;
+        margin: 0 auto 30px;
       }
     }
   }
