--- a/src/scss/pages/editgear.scss
+++ b/src/scss/pages/editgear.scss
@@ -1,18 +1,20 @@
 
-.edit_listgear{
+.edit_listgear {
   padding-left:23px;
-  .edit_listgear_header{
+  .edit_listgear_header {
     margin-top:70px;
-    .theme-page-title{
+
+    .theme-page-title {
       font-family: Gotham Pro;
       font-size: 49px;
       line-height: normal;
       color: #252525;
     }
   }
-  .edit_listgear_body_all{
+  .edit_listgear_body_all {
     display: flex;
-    .edit_listgear_body_left{
+
+    .edit_listgear_body_left {
       .ELBL_info {
           flex-direction: column;
           margin-top: 10px;
@@ -49,7 +51,7 @@
               .custom-beautiful-textfield {
                 width: 100%;
                 input {
-                  padding: 0 0 17px 15px;
+                  padding: 0 0 17px 0;
                 }
               }
               .custom-auto-suggest-container {
@@ -273,9 +275,6 @@
           .custom-beautiful-textfield {
             width: 35%;
             margin-right: 15px;
-            input {
-              padding-left: 15px;
-            }
           }
           table {
             margin-top:25px;
@@ -378,11 +377,31 @@
   opacity: 0.5;
   margin: 0;
 }
+
+@media (max-width: 1077px) {
+  .edit_listgear {
+    .ELBLIC_div {
+      padding: 0 !important;
+    }
+  }
+}
+
 @media(max-width: 780px){
   .add-gear-info {
     display: block !important;
     tr {
       display: block !important;
+    }
+  }
+  .ELBL_photos {
+    margin-bottom: 25px;
+  }
+  .ELBL_address {
+    .address-wrapper {
+      margin: 20px 0;
+      .custom-beautiful-textfield {
+        width: 45%;
+      }
     }
   }
 }
