--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -15,7 +15,13 @@
 
     .card-body {
       border: none !important;
-      min-height: 150px;
+
+      .card-title-wrapper {
+        height: 50%;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+      }
     }
     // CSS for sidebar component
     .custom-beautiful-textfield {
@@ -208,12 +214,14 @@
           padding: 0;
           text-align: left;
           display: flex;
+          justify-content: flex-end;
 
           .card-center {
             flex: 2;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            padding: 15px;
 
             .card-title {
               text-transform: uppercase;
@@ -472,13 +480,29 @@
   }
 }
 
+.cardz {
+  margin-bottom: 1.5rem;
+}
 .gear_card_view {
   border: none;
   background-color: $gray-light;
   margin-bottom: 1.5rem;
   position: relative;
   transition: all 0.6s ease-in-out;
-  .card-checked{
+  height: 100%;
+
+  a {
+    overflow: hidden;
+    height: 50%;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      padding: 0;
+    }
+  }
+  .card-checked {
     position: absolute;
     top:15px;
     right: 15px;
@@ -491,7 +515,6 @@
     line-height: 0;
   }
   .card-img-top {
-    padding: 10px;
     height: 200px;
     cursor: pointer;
   }
@@ -499,9 +522,18 @@
   .card-body {
     padding: 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 
+    .card-title-wrapper {
+      height: 50%;
+      align-items: center;
+      display: flex;
+      justify-content: center;
+      min-height: 70px;
+    }
     .card-title {
-      border-bottom: 0.5px solid #ddd;
       padding: 10px;
       text-transform: uppercase;
       font-size: 0.9rem;
@@ -510,6 +542,7 @@
 
     .card-subtitle {
       border-bottom: 0.5px solid #ddd;
+      border-top: 0.5px solid #ddd;
       font-size: 0.7rem;
       padding: 15px 10px 10px;
       font-weight: 100;
@@ -762,7 +795,9 @@
       height: 47px;
       border-radius: 50%;
       background: #f82462;
-      display: flex;justify-content: center;align-items: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       font-size: 16px;
       border: none;
       padding: 0 !important
