--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -420,10 +420,16 @@
     }
 
     .add-gear-addimage {
+      cursor: pointer;
       border: solid 1px #f82462;
+
       i {
-        font-size: 30px;
+        font-size: 40px;
         color: $primary-color;
+        cursor: pointer;
+      }
+      input {
+        cursor: pointer;
       }
     }
   }
@@ -1045,6 +1051,7 @@
         padding: 5px;
         width: 100%;
         text-align: center;
+        justify-content: center;
       }
       .success_sencond_button {
         padding: 5px;
