image compresison, some issues fix

--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -362,6 +362,7 @@
     }
     .success_first_button {
       width: 45%;
+      justify-content: center;
     }
     .success_sencond_button {
       width: 45%;
