--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -506,6 +506,7 @@
       color: #FFFFFF;
       padding: 14px 47px;
       vertical-align: middle;
+      font-weight: 600;
     }
     .signup-text {
       margin: 45px 0 52px;
