--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -247,7 +247,7 @@ img {
   z-index: 1051;
 }
 
-.custom-beautiful-textfield {
+.custom-beautiful-textfield, .gear-list-container > div > div > div {
   input {
     color: #252525;
     font-size: 16px !important;
