--- a/src/scss/pages/dashboard/payment-dashboard.scss
+++ b/src/scss/pages/dashboard/payment-dashboard.scss
@@ -439,10 +439,6 @@
     .custom-beautiful-textfield {
       width: 60%;
       margin: 5px 0;
-
-      input {
-        padding-left: 15px;
-      }
     }
 
     .swift-container {
@@ -565,6 +561,16 @@
               color: #999;
               font-size: 12px;
             }
+          }
+        }
+        .css-2b097c-container {
+          width: 60%;
+          margin-top: 30px;
+          border-color: #f82462;
+
+          & > div:hover {
+            border-color: #f82462;
+            box-shadow: none;
           }
         }
       }
