--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -708,7 +708,7 @@ span.delete_my_gear {
 .rental-calendar-modal {
   max-width: 1200px !important;
   width: 1200px;
-  height: 110vh;
+  //height: 110vh;
 }
 .address-wrapper {
   display: flex;
