--- a/src/scss/components/calendar/calendar.scss
+++ b/src/scss/components/calendar/calendar.scss
@@ -2,7 +2,10 @@
   display: flex;
   .calendar_first_div {
     width: 100%;
-    height: 800px;
+    height: 980px;
+  }
+  .rbc-event {
+    padding: 0;
   }
   .rbc-event-content {
     display: none !important;
@@ -37,6 +40,7 @@
   }
   .rbc-date-cell {
     padding-top: 26px;
+    padding-right: 15px;
     a {
       margin-right: 26px;
       font-size: 16px;
@@ -92,7 +96,7 @@
     background-color: #faf8f9;
   }
   .rbc-row-segment {
-    padding-top: 10px;
+    padding-top: 5px;
   }
 }
 
@@ -148,6 +152,7 @@
 .rbc-month-view {
   border: 25px solid #faf8f9;
   border-top: 0 !important;
+  height: 92%;
 }
 
 .MuiToolbar-root-1 {
