--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -695,6 +695,15 @@
     .first-left-div, .third-left {
       order: 1;
     }
+    .rent-gear-back-img {
+      margin-left: 0 !important;
+    }
+    .add-gear-back-img {
+      margin-left: 0 !important;
+    }
+    .secure-back-img {
+      margin-left: 0 !important;
+    }
   }
 }
 
