--- a/src/scss/app/app.scss
+++ b/src/scss/app/app.scss
@@ -18,7 +18,7 @@
   flex-direction: column;
   align-items: stretch;
   justify-content: flex-start;
-  margin: $navbar-height-lg 0 0;
+  padding: $navbar-height-lg 0 0;
   width: 100%;
 
   & > * {
