--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -84,6 +84,9 @@ footer {
       justify-content: space-between;
       align-items: center;
 
+      .logo-img {
+        width: 75px;
+      }
       & > div:nth-child(2) {
         display: flex;
         align-items: center;
