--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -479,18 +479,18 @@
     .rent-gear-back-img {
       height: 426px;
       margin-left: -120px;
-      background-image: url('/images/home/undraw_maker_launch_crhe.png');
+      background-image: url('/images/home/undraw_maker_launch_crhe.svg');
     }
     .add-gear-back-img {
       height: 437px;
       margin-left: -143px;
-      background-image: url('/images/home/undraw_make_it_rain_iwk4 (1).png');
+      background-image: url('/images/home/undraw_make_it_rain_iwk4 (1).svg');
     }
     .secure-back-img {
       height: 443px;
       margin-left: -83px;
       margin-top: 1px;
-      background-image: url('/images/home/undraw_secure_data_0rwp.png');
+      background-image: url('/images/home/undraw_secure_data_0rwp.svg');
     }
     h2 {
       font-family: Gotham Pro;
