--- a/src/scss/pages/home-responsive.scss
+++ b/src/scss/pages/home-responsive.scss
@@ -55,7 +55,8 @@
       border: none;
       padding: 0;
       font-size: 18px;
-      letter-spacing: 0.6px;
+      //letter-spacing: 0.6px;
+      letter-spacing: -1%;
       line-height: 1em;
       color: $white;
       font-weight: 300;
