--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,6 +19,7 @@
 @import 'components/footer';
 @import 'components/material-input';
 @import 'components/CustomInputWithButton';
+@import 'components/google-place-suggest';
 // Pages
 @import 'pages/home';
 @import 'pages/home.animation';
