--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -350,6 +350,7 @@
     padding: 10px;
     margin-top:40px;
     margin-bottom: 40px;
+
     .success_gear_categoryName{
       font-size: 16px ;
       line-height: 27px;
@@ -391,7 +392,6 @@
       width: 100%;
     }
   }
-
   .add-gear-images {
     display: flex;
     flex-wrap: wrap;
@@ -448,7 +448,6 @@
       }
     }
   }
-
   .custom-theme-row {
     .custom-theme-col {
       div {
@@ -471,7 +470,6 @@
       }
     }
   }
-
   #chip_style {
     div {
       color:#F82462;
@@ -489,6 +487,15 @@
           margin: 0 !important;
         }
       }
+    }
+  }
+  .add-gear-address {
+    .google-places-input {
+      margin: 0 auto !important;
+      width: 100%;
+      background-color: white;
+      color: #252525;
+      border-bottom: solid 1px #7C7C7C;
     }
   }
 }
