--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -70,6 +70,21 @@
   }
 }
 
+.theme-btn-filled-white-color-black {
+  background-color: $white;
+  color: #252525;
+
+  &:hover {
+    border: solid 1px #252525;
+    background-color: #252525;
+    color: white;
+  }
+}
+
+.theme-btn-border-none {
+  border: none;
+}
+
 .theme-btn-outline-pink {
   background-color: $primary-color;
   border: 1px solid $primary-light-color;
@@ -78,7 +93,6 @@
   &:hover {
     background-color: $white;
     color: $primary-color;
-
   }
 }
 
