--- a/src/scss/pages/addgear.scss
+++ b/src/scss/pages/addgear.scss
@@ -495,7 +495,7 @@
       width: 100%;
       background-color: white;
       color: #252525;
-      border-bottom: solid 1px #7C7C7C;
+      border-bottom: solid 1px #eaeaea !important;
     }
   }
 }
