--- a/src/scss/components/google-place-suggest.scss
+++ b/src/scss/components/google-place-suggest.scss
@@ -20,3 +20,13 @@
     right: 0;
   }
 }
+
+.google-places-input-wrapper.white-model {
+  .google-places-input {
+    margin: 0 auto !important;
+    width: 100%;
+    background-color: white;
+    color: #252525;
+    border-bottom: solid 1px #eaeaea !important;
+  }
+}
