--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -75,7 +75,7 @@
   color: #252525;
 
   a {
-    padding: 2px 5px;
+    padding: 2px 5px !important;
   }
   &:hover {
     border: solid 1px #252525;
