--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -294,11 +294,11 @@ img {
 }
 
 ::-webkit-scrollbar {
-  width: 0.6em;
+  width: 0.3em;
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5);
+  -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 1);
 }
 
 ::-webkit-scrollbar-thumb {
