--- a/src/scss/components/google-place-suggest.scss
+++ b/src/scss/components/google-place-suggest.scss
@@ -1,32 +1,66 @@
-.google-places-input-wrapper {
-  display: inline-flex;
-  border-bottom: solid 1px white;
-  align-items: center;
 
-  .google-places-input {
-    background-color: #f82462;
-    border: none;
-    color: white;
-    padding: 0 0 6px 15px;
-    outline: none;
+.google-places-autocomplete {
+  .google-places-input-wrapper {
+    display: inline-flex;
+    border-bottom: solid 1px white;
+    align-items: center;
+
+    .google-places-input {
+      background-color: #f82462;
+      border: none;
+      color: white;
+      padding: 0 0 6px 15px;
+      outline: none;
+
+      &::placeholder {
+        font-size: 16px;
+      }
+    }
+    img {
+      width: 16px;
+      height: 19px;
+      margin-left: 13px;
+    }
+    .google-place-loader {
+      position: absolute;
+      right: 0;
+    }
   }
-  img {
-    width: 15px;
-    height: 19px;
-    margin-left: 13px;
+  .google-places-input-wrapper.white-model {
+    .google-places-input {
+      margin: 0 auto !important;
+      width: 100%;
+      background-color: white;
+      color: #252525;
+      border-bottom: solid 1px #eaeaea !important;
+    }
   }
-  .google-place-loader {
+  .suggestions-container {
     position: absolute;
-    right: 0;
-  }
-}
-
-.google-places-input-wrapper.white-model {
-  .google-places-input {
-    margin: 0 auto !important;
-    width: 100%;
     background-color: white;
-    color: #252525;
-    border-bottom: solid 1px #eaeaea !important;
+    width: 100%;
+    border-radius: 0 0 5px 5px;
+
+    .suggestion-container {
+      display: flex;
+      padding: 7px 5px;
+      align-items: center;
+      cursor: pointer;
+
+      &:hover, &.active {
+        background-color: #eceaea;
+      }
+      &:last-child:hover {
+        border-radius: 0 0 5px 5px;
+      }
+      svg {
+        margin-left: 10px;
+        width: 5%;
+      }
+      .suggestion {
+        margin-left: 20px;
+        width: 95%;
+      }
+    }
   }
 }
