--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -298,7 +298,8 @@ img {
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 1);
+  //-webkit-box-shadow: inset 0 0 3px rgba(255, 255, 255, 1);
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
